add_subdirectory(gflags)
add_subdirectory(glog)
add_subdirectory(ginac)
add_subdirectory(metis)
add_subdirectory(eigen)
if( FEELPP_HAS_NLOPT )
  add_subdirectory(nlopt)
endif()
if( FEELPP_HAS_IPOPT )
  add_subdirectory(ipopt)
endif()
## No cmake support for HPDDM!
#if( FEELPP_HAS_HPDDM )
#  add_subdirectory(hpddm)
#endif()
if( FEELPP_HAS_PYBIND11 )
  add_subdirectory(pybind11)
endif()
if ( FEELPP_HAS_MONGOCXX )
  add_subdirectory(mongocxx)
endif()
add_subdirectory(gmsh)

install(EXPORT feelpp-contrib-export-targets DESTINATION share/feelpp/feel/cmake/modules)
