cmake_minimum_required(VERSION 3.3)
project(doc)

if ( ${CMAKE_SOURCE_DIR}/ STREQUAL ${CMAKE_CURRENT_SOURCE_DIR} )
  find_package(Feel++ PATHS ${FEELPP_DIR}/share/feelpp/feel/cmake/modules $ENV{FEELPP_DIR}/share/feelpp/feel/cmake/modules /usr/share/feelpp/feel/cmake/modules /usr/local/share/feelpp/feel/cmake/modules )
  if(NOT FEELPP_FOUND)
    message(FATAL_ERROR "Feel++ was not found on your system. Make sure to install it and specify the FEELPP_DIR to reference the installation directory.")
  endif()
else()
  feelpp_get_environment()
endif()

if ( NOT TARGET doc )
  add_custom_target(doc)
endif()

if(FEELPP_ENABLE_DOCUMENTATION)
  ADD_SUBDIRECTORY( manual )
  ADD_SUBDIRECTORY( snippets )
endif()
if(FEELPP_ENABLE_DOXYGEN)
  ADD_SUBDIRECTORY( api )
endif()
